--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -1,5 +1,5 @@
-vscp (14.0.0-1) UNRELEASED; urgency=low
+vscp-driver-l1-logger (14.0.0-1) unstable; urgency=medium
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
- -- Ake Hedman <akhe@grodansparadis.com>  Tue, 26 Sept 2019 15:00:00 +0200
+ -- Ake Hedman <akhe@grodansparadis.com>  Thu, 26 Sep 2019 16:00:01 +0200
