--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -1,5 +1,5 @@
-vscp-driver-l1-logger (14.0.0-1) unstable; urgency=medium
+vscp-driver-l1-logger (14.0.0-1) UNRELEASED; urgency=medium
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release (Closes: #0000)  <nnnn is the bug number of your ITP>
 
  -- Ake Hedman <akhe@grodansparadis.com>  Thu, 26 Sep 2019 16:00:01 +0200
