--- a/man/vscpl1drv-logger.1
+++ b/man/vscpl1drv-logger.1
@@ -10,8 +10,8 @@ vscpl1drv\-logger \- VSCP Level I Logger Driver
 vscpl1drv\-logger
 .SH DESCRIPTION
 .PP
-vscpd level I driver for diagnostic logging.
-It allows you to log (VSCP Level I events to a text file.
+VSCP level I driver (CANAL driver) for diagnostic logging.
+It makes it possible to log (VSCP Level I events to a text file.
 Several drivers can be loaded logging data to different output files and
 using different filter/masks.
 .SS Configuration string
@@ -55,10 +55,12 @@ Number of databytes
 .IP \[bu] 2
 Databytes
 .PP
-There are many Level I drivers available in VSCP & Friends framework
-that can be used with both VSCP Works and the VSCP Daemon and added to
-that Level II and Level III drivers that can be used with the VSCP
-Daemon.
+There are many Level I drivers (CANAL drivers) available in VSCP &
+Friends framework that can be used with both VSCP Works and the VSCP
+Daemon (vscpd) and other tools that interface the drivers using the
+CANAL standard interface.
+Added to that many Level II and Level III drivers are available that can
+be used with the VSCP Daemon.
 .PP
 Level I drivers is documented
 here (https://grodansparadis.gitbooks.io/the-vscp-daemon/level_i_drivers.html).
