--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -1,5 +1,5 @@
-vscpl1drv-logger (14.0.0-1) UNRELEASED; urgency=medium
+vscpl1drv-logger (1.1.0-1) stable; urgency=medium
 
-  * Initial release (Closes: #1234)  
+  * Initial release (Closes: #1234)
 
  -- Ake Hedman <akhe@grodansparadis.com>  Thu, 26 Sep 2019 16:00:01 +0200
