--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -1,4 +1,4 @@
-vscpl1drv-logger%MAJOR-VERSION (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; urgency=medium
+vscpl1drv-logger (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN) stable; urgency=medium
 
   * Initial release
 
