--- a/debian_orig/install
+++ b/debian_orig/install
@@ -1,2 +1,2 @@
-linux/vscpl1drv-logger.so.%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION /usr/lib/%SUBFOLDER/
-linux/libvscpl1drv-logger.a /usr/lib/%SUBFOLDER/
+linux/vscpl1drv-logger.so.%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION /var/lib/vscp/drivers/level1
+linux/libvscpl1drv-logger.a /var/lib/vscp/drivers/level1
