--- a/debian_orig/changelog
+++ b/debian_orig/changelog
@@ -2,4 +2,4 @@ vscpl1drv-logger (%MAJOR-VERSION.%MINOR-VERSION.%RELEASE-VERSION-%RELEASE-DEBIAN
 
   * Initial release
 
- -- Ake Hedman <akhe@grodansparadis.com>  Thu, 26 Sep 2019 16:00:01 +0200
+ -- Ake Hedman <akhe@grodansparadis.com>  %DATENOW
